--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -951,9 +951,7 @@ sub ShowFlash {
 	/\s+(private-multiple-fs|multiple-fs|LISP-MapCache-IPv\S+|nv_hdr)$/ &&
 	    next;
 
-	if (/^(\s*-+#-+)(\s+.*)/) {
-	    ProcessHistory("FLASH","","","!Flash: $1$2\n") && next;
-	} elsif (/(dhcp_[^. ]*\.txt|vlan\.dat|sflog|snooping)/ ||
+	if (/(dhcp_[^. ]*\.txt|vlan\.dat|sflog|snooping)/ ||
 		 /(smart-log\/agentlog|syslog)\s*$/) {
 	    # filter frequently changing files (dhcp & vlan database) from flash
 	    # change from:
@@ -1110,6 +1108,10 @@ sub DirSlotN {
 	# on dual RP ASR systems
 	next if (/\.issu_loc_lock\s*$/);
 
+	# vASA nonsense
+	# 9 file(s) total size: 252854822 bytes
+	next if (/\d+ file\S+ total size: \d+ bytes/i);
+
 	# filter frequently changing files (dhcp & vlan database)
 	# change from:
 	#    9  -rw-         660  Jan 15 2011 20:43:54 vlan.dat
@@ -1142,13 +1144,13 @@ sub DirSlotN {
 	} elsif (/(running-config-archive-)\S+\s*$/) {
 	    my($arc) = $1;
 
-	# filter frequently changing files of the config archive feature
-	# change from:
-	#    9  -rw-         660  Jan 15 2011 20:43:54 running-config-archive-Jul--1-16-50-27.123-113
-	#    9  -rw-         660  Jan 15 2011 20:43:54 +00:00  running-config-archive-Jul--1-16-50-27.123-113
-	# to:
-	#       -rw-                                   running-config-archive-Jul--1-16-50-27.123-113
-	#       -rw-                                           running-config-archive-Jul--1-16-50-27.123-113
+	    # filter frequently changing files of the config archive feature
+	    # change from:
+	    #    9  -rw-         660  Jan 15 2011 20:43:54 running-config-archive-Jul--1-16-50-27.123-113
+	    #    9  -rw-         660  Jan 15 2011 20:43:54 +00:00  running-config-archive-Jul--1-16-50-27.123-113
+	    # to:
+	    #       -rw-                                   running-config-archive-Jul--1-16-50-27.123-113
+	    #       -rw-                                           running-config-archive-Jul--1-16-50-27.123-113
 	    if (/(\s*\d+\s+)(\S+\s+)(\d+)(\s+)(\w+ \d+\s+\d+ \d+:\d+:\d+ .\d+:\d+)/) {
 		my($fn, $a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5, $');
 		my($fnl, $szl, $dtl) = (length($fn), length($sz), length($dt));
@@ -1182,23 +1184,17 @@ sub DirSlotN {
 	    }
 	}
 
-	if (/.*\((\d+) bytes free(\/\d+% free)?\)/) {
-	    my($tmp) = $1;
-	    if ($tmp >= (1024 * 1024 * 1024)) {
-		$tmp = int($tmp / (1024 * 1024 * 1024));
-		s/$1 bytes free/$tmp GB free/;
-	    } elsif ($tmp >= (1024 * 1024)) {
-		$tmp = int($tmp / (1024 * 1024));
-		s/$1 bytes free/$tmp MB free/;
-	    } elsif ($tmp >= (1024)) {
-		$tmp = int($tmp / 1024);
-		s/$1 bytes free/$tmp KB free/;
-	    } elsif ($tmp > 0) {
-		s/$1 bytes free/< 1KB free/;
-	    } else {
-		s/$1 bytes free/0 bytes free/;
-	    }
-	    s/\/\d+% free//;
+	# XE: 822083584 bytes total (821081600 bytes free)
+	if (/^\s*(\d+) bytes total\s+\((\d+) bytes free\)/i) {
+	    ProcessHistory("FLASH","","","!Flash: $dev: " .
+			   diskszsummary($1, $2) . "\n");
+	    next;
+	}
+	# vASA: 8571076608 bytes total (8306561024 bytes free/96% free)
+	if (/^\s*(\d+) bytes total \((\d+) bytes free\/\d+% free\)/) {
+	    ProcessHistory("FLASH","","","!Flash: $dev: " .
+			   diskszsummary($1, $2) . "\n");
+	    next;
 	}
 
 	ProcessHistory("FLASH","","","!Flash: $dev: $_");
