--- a/rancid/bin/fnrancid.in
+++ b/rancid/bin/fnrancid.in
@@ -182,13 +182,15 @@ sub GetSystem {
 	next if /^\s*$/;
 	last if (/$prompt/);
 
+	if ($filter_osc >= 2) {
+	    next if (/^\s*APP-DB: .*/);
+	    next if (/^\s*Botnet DB: .*/);
+	    next if (/^\s*IPS Malicious URL Database: .*/);
+	    next if (/^\s*IPS-ETDB: .*/);
+	}
 	next if (/^system time:/i);
-	next if (/^\s*APP-DB: .*/);
-	next if (/^\s*Botnet DB: .*/);
 	next if (/^\s*Extended DB: .*/);
-	next if (/^\s*IPS Malicious URL Database: .*/);
 	next if (/^\s*IPS-DB: .*/);
-	next if (/^\s*IPS-ETDB: .*/);
 	next if (/^\s*Virus-DB: .*/);
 	next if (/^FortiClient application signature package:/);
 	# Cluster uptime
