--- a/bin/jlogin.in
+++ b/bin/jlogin.in
@@ -164,6 +164,10 @@ proc login { router user passwd cmethod cyphertype identfile} {
 						  sleep 1; send -- "$passwd\r"
 						  exp_continue
 						}
+	    -re "<\[^ ]+>"			{ # skip login tips that look
+						  # like prompts
+						  exp_continue;
+						 }
 	    -re "$prompt"		{ break; }
 	    denied	{ send_user "\nError: Check your password for $router\n"
 	                  catch {close}; catch {wait}; return 1
