--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -334,7 +334,7 @@ sub ShowEnvTemp {
 	return(-1) if (/\% Permission denied/);
 	return(-1) if (/command authorization failed/i);
 
-	s/ +$//;	# Drop trailing ' '
+	s/ +$//;	# Drop trailing spaces
 
 # Cut out CurTemp - drop the 2nd to last field.
 #--------------------------------------------------------------------
@@ -345,6 +345,8 @@ sub ShowEnvTemp {
 	if (/(control temperature|monitor temperature)/i) {
 	    ProcessHistory("COMMENTS","","","!Env: $_");
 	    while (<$INPUT>) {
+		tr/\015//d;
+		goto EndShowEnvTemp if (/^$prompt/);
 		if (/(.*\s+\d+\s+\d+\s+)(\d+)(.*$)/) {
 		    $_ = sprintf("%s%-". length($2)."s%s\n", $1, "", $3);
 		}
@@ -360,6 +362,7 @@ sub ShowEnvTemp {
 	    ProcessHistory("COMMENTS","","","!Env: $_");
 	}
     }
+EndShowEnvTemp:
     ProcessHistory("COMMENTS","","","!\n");
     return(0);
 }
