fnrancid, fortigate.pm: convert fortigate to module

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -16,7 +16,7 @@ bin_SCRIPTS = a10login alogin agmrancid anlogin arancid \
 	avologin avorancid blogin brancid brlogin cat5rancid clogin \
 	control_rancid csblogin cssrancid \
 	dllogin elogin erancid f5rancid f10rancid \
-	flogin fnlogin fnrancid fxlogin hlogin hrancid htlogin \
+	flogin fnlogin fxlogin hlogin hrancid htlogin \
 	htrancid jerancid jlogin mrancid mrvlogin mtlogin mtrancid \
 	nlogin noklogin nrancid nslogin nsrancid panlogin plogin \
 	rancid rblogin rivlogin \
