--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -8,8 +8,8 @@ AUTOMAKE_OPTIONS=foreign no-dependencies
 
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm acos.pm aeos.pm arbor.pm bigip.pm ciscowlc.pm \
-		 dell.pm edgemax.pm edgerouter.pm exos.pm foundry.pm \
-		 fss2.pm fxos.pm \
+		 dell.pm edgemax.pm edgerouter.pm exos.pm \
+		 fortigate.pm foundry.pm fss2.pm fxos.pm \
 		 ios.pm iossb.pm iosshtech.pm iosxr.pm junos.pm mrv.pm nxos.pm \
 		 panos.pm rbt.pm sros.pm vrp.pm wavesvros.pm
 pkglib_in = $(my_pkglib_DATA:%=%.in)
@@ -64,6 +64,7 @@ dell.pm: dell.pm.in
 edgemax.pm: edgemax.pm.in
 edgerouter.pm: edgerouter.pm.in
 exos.pm: exos.pm.in
+fortigate.pm: fortigate.pm.in
 foundry.pm: foundry.pm.in
 fss2.pm: fss2.pm.in
 fxos.pm: fxos.pm.in
