--- a/rancid/lib/fortigate.pm.in
+++ b/rancid/lib/fortigate.pm.in
@@ -32,11 +32,7 @@ sub import {
 # post-open(collection file) initialization
 sub init {
     # add content lines and separators
-    ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n!\n");
-    ProcessHistory("COMMENTS","keysort","B0","!\n");
-    ProcessHistory("COMMENTS","keysort","D0","!\n");
-    ProcessHistory("COMMENTS","keysort","F0","!\n");
-    ProcessHistory("COMMENTS","keysort","G0","!\n");
+    ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n#\n");
 
     0;
 }
