remove unnecessary m// in inloop(). goto to end of GetConf() if prompt is seen.

--- a/lib/fortigate.pm.in
+++ b/lib/fortigate.pm.in
@@ -56,20 +56,20 @@ TOP: while(<$INPUT>) {
 	}
 	while (/^.+(#|\$)\s*($cmds_regexp)\s*$/) {
 	    $cmd = $2;
-	    # - FortiGate prompts end with either '#' or '$'. Further, they may
+	    # FortiGate prompts end with either '#' or '$'. Further, they may
 	    # be prepended with a '~' if the hostname is too long. Therefore,
 	    # we need to figure out what our prompt really is.
 	    if (!defined($prompt)) {
-		if ($_ =~ m/^.+\~\$/) {
+		if ($_ =~ /^.+\~\$/) {
 		    $prompt = '\~\$ .*';
 		} else {
-		    if ($_ =~ m/^.+\$/) {
+		    if ($_ =~ /^.+\$/) {
 			$prompt = ' \$ .*';
 		    } else {
-			if ($_ =~ m/^.+\~#/) {
+			if ($_ =~ /^.+\~#/) {
 			    $prompt = '\~# .*';
 			} else {
-			    if ($_ =~ m/^.+#/) {
+			    if ($_ =~ /^.+#/) {
 				$prompt = ' # .*';
 			    }
 			}
@@ -166,7 +166,7 @@ sub GetConf {
 	    ProcessHistory("","","","# <removed>\n");
 	    while (<$INPUT>) {
 		tr/\015//d;
-		last if (/$prompt/);
+		goto ENDGETCONF if (/$prompt/);
 
 		if (/^\s*-----END (RSA|ENCRYPTED) PRIVATE KEY-----"/) {
 	    	    ProcessHistory("","","","#$_");
@@ -189,6 +189,7 @@ sub GetConf {
 
 	ProcessHistory("","","","$_");
     }
+ENDGETCONF:
     $found_end = 1;
     return(1);
 }
