--- a/rancid/lib/nxos.pm.in
+++ b/rancid/lib/nxos.pm.in
@@ -499,8 +499,8 @@ sub DirSlotN {
 	# Drop bootvar_debug log files
 	/\s+bootvar_debug\./ && next;
 
-	# Drop accounting.log
-	/\s+accounting\.log$/ && next;
+	# Drop accounting.log*
+	/\s+accounting.log.*/ && next;
 
 	# Drop vtp_debug.log and vtp_debug_old.log CDETS bug CSCuy87611
 	/\s+vtp_debug(_old)?\.log$/ && next;
