--- a/bin/dllogin.in
+++ b/bin/dllogin.in
@@ -181,24 +181,21 @@ proc login { router user userpswd passwd enapasswd prompt cmethod cyphertype ide
 				  send_user "\nError: Check your passwd for $router\n";
 				  catch {close}; catch {wait}; return 1
 				 }
-	-re "\[Uu]ser\[nN]ame:"			{
-					  sleep 1;
-					  send -- "$user\r"
+	-re "\[Uu]ser\[nN]ame:"		{
+					  send -h -- "$user\r"
 					  set uprompt_seen 1
 					  exp_continue
 					}
 	-re "@\[^\r\n]+\[Pp]assword:"	{
 					  # ssh pwd prompt
-					  sleep 1
-					  send -- "$userpswd\r"
+					  send -h -- "$userpswd\r"
 					  exp_continue
 					}
-	"\[Pp]ass\[Ww]ord:"			{
-					  sleep 1;
+	"\[Pp]ass\[Ww]ord:"		{
 					  if {$uprompt_seen == 1} {
-						send -- "$userpswd\r"
+						send -h -- "$userpswd\r"
 					  } else {
-						send -- "$passwd\r"
+						send -h -- "$passwd\r"
 					  }
 					  exp_continue
 					}
@@ -229,9 +226,7 @@ proc run_commands { prompt command } {
     for {set i 0} {$i < $num_commands} { incr i} {
 	send -- "[subst [lindex $commands $i]]\r"
 	expect {
-            -re "$prompt"			{ send "\r"
-						  sleep 0.5
-						}
+            -re "$prompt"			{ send -h "\r" }
 	    -re "All "				{ send "a"
 						  exp_continue
 	    -re "\[\n\r]+"			{ exp_continue }
@@ -240,17 +235,16 @@ proc run_commands { prompt command } {
      }
 
      expect {
-	  -re "$prompt$"				{
-						  send "logout\r"
-						  sleep 0.5
+	  -re "$prompt$"			{
+						  send -h "logout\r"
 						  exp_continue
 						}
-	  -re "\[\n\r]+"				{ exp_continue }
+	  -re "\[\n\r]+"			{ exp_continue }
 	  -gl "Configuration modified, save?"	{
 						  send "n\r"
 						  exp_continue
 						}
-	  timeout					{ catch {close}; catch {wait};
+	  timeout				{ catch {close}; catch {wait};
 						  return 0
 						}
 	  eof					{ return 0 }
