--- a/rancid/bin/clogin.in
+++ b/rancid/bin/clogin.in
@@ -390,7 +390,7 @@ proc run_commands { prompt command } {
 	    send -- "[subst -nocommands [lindex $commands $i]]\r"
 	}
 	expect {
-	    -re "\b+"				{ exp_continue }
+	    -re "^\b+"				{ exp_continue }
 	    -re "^\[^\n\r *]*$reprompt"		{ send_user -- "$expect_out(buffer)"
 						}
 	    -re "^\[^\n\r]*$reprompt."		{ send_user -- "$expect_out(buffer)"
