--- a/bin/alogin.in
+++ b/bin/alogin.in
@@ -183,7 +183,7 @@ proc login { router user userpswd passwd prompt cmethod cyphertype } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global do_saveconfig in_proc cmethod
+    global do_interact do_saveconfig in_proc cmethod
     set in_proc 1
 
     send "lines 0\r"
@@ -215,6 +215,12 @@ proc run_commands { prompt command } {
 						}
 	}
     }
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
+
     send "exit\r"
     expect {
 	-re "^WARNING: There are unsaved configuration changes." {
