--- a/bin/brlogin.in
+++ b/bin/brlogin.in
@@ -316,7 +316,7 @@ proc do_enable { enauser enapasswd } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global do_saveconfig in_proc platform
+    global do_interact do_saveconfig in_proc platform
     set in_proc 1
 
     # If the prompt is (enable), then we are on a switch and the
@@ -391,6 +391,11 @@ proc run_commands { prompt command } {
 	}
     }
     log_user 1
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
 
     if { [ string compare "extreme" "$platform" ] } {
 	send -h "exit\r"
