--- a/bin/htlogin.in
+++ b/bin/htlogin.in
@@ -13,7 +13,7 @@
 # XXX need to import login_top.
 
 # Usage line
-set usage "Usage: $argv0 \[-dSV\] \[-noenable\] \[-c command\] \
+set usage "Usage: $argv0 \[-diSV\] \[-noenable\] \[-c command\] \
 \[-Evar=x\] \[-f cloginrc-file\] \[-p user-password\] \
 \[-s script-file\] \[-t timeout\] \[-u username\] \
 \[-v vty-password\] \[-w enable-username\] \[-x command-file\] \
@@ -26,6 +26,7 @@ set usage "Usage: $argv0 \[-dSV\] \[-noenable\] \[-c command\] \
 set password_file $env(HOME)/.cloginrc
 # Default is to login to the router
 set do_command 0
+set do_interact 0
 set do_script 0
 # The default is to automatically enable
 set avenable 1
@@ -87,6 +88,9 @@ for {set i 0} {$i < $argc} {incr i} {
 	    set do_cloginrcdbg 1
 	} -M* {
 	    set do_cloginrcdbg 2
+	# interactive
+	} -i* {
+	    set do_interact 1
 	# VTY Password
 	} -p* {
 	    if {! [  regexp .\[pP\](.+) $arg ignore userpasswd]} {
@@ -415,7 +419,7 @@ proc login { router user userpswd passwd prompt cmethod cyphertype } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global in_proc
+    global do_interact in_proc
     set in_proc 1
 
     # handle escaped ;s in commands, and ;; and ^;
@@ -434,6 +438,12 @@ proc run_commands { prompt command } {
 	    -re "\[\n\r]"			{ exp_continue }
 	}
     }
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
+
     send "exit\r"
     expect {
 	"\n"					{ exp_continue }
