--- a/bin/mrvlogin.in
+++ b/bin/mrvlogin.in
@@ -241,7 +241,7 @@ proc do_enable { enauser enapasswd } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global in_proc
+    global do_interact in_proc
     set in_proc 1
 
     # match cisco config mode prompts too, such as router(config-if)#
@@ -297,6 +297,11 @@ proc run_commands { prompt command } {
 	}
     }
     log_user 1
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
 
     send -h "exit\r"
     expect {
