--- a/bin/mtlogin.in
+++ b/bin/mtlogin.in
@@ -181,7 +181,7 @@ proc login { router user userpswd passwd prompt cmethod cyphertype identfile } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global in_proc
+    global do_interact in_proc
     set in_proc 1
 
     # escape any parens in the prompt, such as "(enable)"
@@ -203,6 +203,12 @@ proc run_commands { prompt command } {
 	    -re "\[\n\r]+"			{ exp_continue }
 	}
     }
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
+
     send "quit\r"
     expect {
 	-re "^WARNING: There are unsaved configuration changes." {
