--- a/bin/noklogin.in
+++ b/bin/noklogin.in
@@ -297,7 +297,7 @@ proc login { router user userpswd passwd cmethod cyphertype identfile } {
 
 # Run commands given on the command line.
 proc run_commands { prompt command } {
-    global do_saveconfig in_proc
+    global do_interact do_saveconfig in_proc
     set in_proc 1
 
     # match sros config mode prompts too, such as A:name>mode>mode#
@@ -341,6 +341,11 @@ proc run_commands { prompt command } {
 	}
     }
     log_user 1
+
+    if { $do_interact == 1 } {
+	interact
+	return 0
+    }
 
     send -h "logout\r"
     expect {
