panlogin: copy/customize last/failed login match from clogin
I have this error in my test :

[root@localhost ~]# sudo -u rancid -s /usr/local/rancid/bin/clogin 172.25.32.20
172.25.32.20
spawn ssh -x -l admaxians 172.25.32.20
Password:
Last login: Wed Oct 24 08:43:26 2018 from 172.25.130.80

Number of failed attempts since last successful login: 0

--- a/bin/panlogin.in
+++ b/bin/panlogin.in
@@ -240,6 +240,12 @@ proc login { router user userpswd passwd cmethod cyphertype identfile } {
 				  send_user "\nError: Check your passwd for $router\n"
 				  catch {close}; wait; return 1
 				}
+	-nocase -re "successful login:"	{
+				  exp_continue
+				}
+	-nocase -re "failed login:"	{
+				  exp_continue
+				}
 	"Login failed"		{
 				  send_user "\nError: Check your passwd for $router\n"
 				  return 1
